<resources>
    <string name="app_name">Oishi</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or_with">or with</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="have_any_account">Have any account?</string>
    <string name="create">Create</string>
    <string name="username">Username</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="measurements">Mesurements</string>
</resources>